Fix css grid/flexbox gap and backface-visibility issues on chrome 79

--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -6,7 +6,6 @@
     padding: 0;
     box-sizing: inherit;
     -webkit-font-smoothing: subpixel-antialiased;
-    backface-visibility: hidden;
 }
 
 html {
