--- a/src/sass/layout/_base.scss
+++ b/src/sass/layout/_base.scss
@@ -1,6 +1,7 @@
 
 .container {
-    width: min(90%, 1200px);
+    width: 90%;
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 4rem;
