--- a/src/sass/layout/_primary-skills.scss
+++ b/src/sass/layout/_primary-skills.scss
@@ -6,17 +6,29 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 3.2rem;
+    //gap: 3.2rem;
 
     margin-left: auto;
     margin-right: auto;
     padding: 0 0 3.2rem;
 
+    @media (max-width: $bp-medium) {
+        .skill-level {
+            margin-top: 2.4rem;
+        }
+    }
+
     @media (min-width: $bp-small) {
         flex-direction: row;
+        .skill-level + .skill-level {
+            margin-left: 3.2rem;
+        }
     }
 
     @media (min-width: $bp-medium) {
-        gap: 8rem;
+        //gap: 8rem;
+        .skill-level + .skill-level {
+            margin-left: 8rem;
+        }
     }
 }
